--- a/readme
+++ b/readme
@@ -2,6 +2,6 @@ Wireguard Client Docker
 
 To bypass CGNat or DS-Lite
 
-Please download the [a link](https://raw.githubusercontent.com/NightMeer/WireguardClient-Docker/main/wg0.conf)wg0.conf edit the values and start the Docker
+Please download the [wg0.conf](https://raw.githubusercontent.com/NightMeer/WireguardClient-Docker/main/wg0.conf) edit the values and start the Docker
 
 docker run --restart unless-stopped --privileged -d -v /host/path/config:/etc/wireguard wireguard
